--- a/src/app/views/emails/welcome.hbs
+++ b/src/app/views/emails/welcome.hbs
@@ -1,8 +1,8 @@
 <strong>Olá, {{ student }}</strong>
 <p>Seja bem vindo à GymPoint!</p>
 <p>
-  Sua matrícula na GymPoint foi realizada, confira os dados:<br />
+  Sua matrícula na GymPoint foi realizada. Confira os dados:<br />
   <strong>Plano: </strong> {{ plan }}<br />
   <strong>Data de término: </strong> {{ end_date }}<br />
-  <strong>Valor total: </strong> {{ price }}
+  <strong>Valor total: </strong> R$ {{ price }}
 </p>
